<resources>
    <string name="app_name">NYTimesSearch</string>
    <string name="action_settings">Settings</string>
    <string name="search_">Search...</string>
    <string name="search">Search</string>
    <string name="begin_date">Begin Date</string>
    <string name="not_set">Not set</string>
    <string name="remove_date">Remove date</string>
    <string name="sort">Sort</string>
    <string name="news_desk">News Desk</string>
    <string name="arts">Arts</string>
    <string name="fashion_style"><![CDATA[Fashion & Style]]></string>
    <string name="sports">Sports</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="search_settings">Search Settings</string>
    <string-array name="search_sort_array">
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>
    <string name="an_error_has_occurred">An error has occurred.</string>
    <string name="network_is_not_available">Network is not available.</string>
    <string name="no_articles_found">No articles found.</string>
    <string name="the_ny_times">The NY Times</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="share">Share</string>
</resources>
